--- a/urls.yml
+++ b/urls.yml
@@ -1,1 +1,2 @@
 glib: https://download.gnome.org/sources/glib/2.72/glib-2.72.1.tar.xz
+pixman: https://www.cairographics.org/releases/pixman-0.40.0.tar.gz
