--- a/roles/qemu-dep/tasks/glib.yml
+++ b/roles/qemu-dep/tasks/glib.yml
@@ -1,7 +1,8 @@
 ---
 - name: "GLib: Prepare source code"
-  include_tasks:
-    file: common.yml
+  include_role:
+    name: common
+    tasks_from: download.yml
   vars:
     task: GLib
     tar_url: "{{ urls.glib }}"
