--- a/urls.yml
+++ b/urls.yml
@@ -1,2 +1,3 @@
 glib: https://download.gnome.org/sources/glib/2.72/glib-2.72.1.tar.xz
 pixman: https://www.cairographics.org/releases/pixman-0.40.0.tar.gz
+qemu: https://download.qemu.org/qemu-7.0.0.tar.xz
