--- a/qemu.yml
+++ b/qemu.yml
@@ -7,6 +7,7 @@
     tmp_dir: "{{ (workspace, 'tmp') | path_join }}"
     paths:
       - "{{ (usr_dir, 'bin') | path_join }}"
+      - "{{ (usr_dir, 'usr/bin') | path_join }}"
       - "{{ (ansible_env.HOME, '.local/bin') | path_join }}"
       - "{{ (ansible_env.HOME, '.local/usr/bin') | path_join }}"
       - "{{ ansible_env.PATH }}"
@@ -32,6 +33,8 @@
         file: urls.yml
 
     # TODO: do we have to install pkg-config as well?
+    # https://gitlab.freedesktop.org/pkg-config/pkg-config
+
     - block:
         - name: "Check GLib"
           command: pkg-config --libs glib-2.0
@@ -97,3 +100,6 @@
         - include_role:
             name: cloud-utils
             tasks_from: cloud-utils.yml
+
+    - debug:
+        msg: Please add "{{ usr_dir }}/bin:{{ usr_dir }}/usr/bin" to your PATH.
